# kernel-builder

./: Dockerfile  LICENSE  README.md  build-variants.json  flake.nix  overlay.nix  test-kernel.py  versions.nix
.github/workflows/: build_kernel.yaml  build_kernel_rocm.yaml  build_kernel_windows.yaml  build_kernel_windows.yaml.yml  build_kernel_xpu.yaml  docker-build-push.yaml  test_python.yaml
build-driver/: kbuilder.ps1
build2cmake/: Cargo.toml  flake.nix
build2cmake/src/: config.rs  e2e_test.rs  fileset.rs  main.rs  metadata.rs  torch.rs  torch_noarch.rs
compliant/: Cargo.toml
compliant/src/: lib.rs  main.rs
dockerfiles/: Dockerfile
docs/: build-variants.md  docker.md  documentation-generator.md  nix.md  why-nix.md  writing-kernels.md
examples/activation/: build.toml  flake.nix
examples/cutlass-gemm/: build.toml  flake.nix
examples/relu/: build.toml  flake.nix  result
examples/relu-metal-cpp/: build.toml  result
examples/relu-specific-torch/: flake.nix
examples/relu-torch-bounds/: build.toml
examples/silu-and-mul-universal/: build.toml  flake.nix
kernel-abi-check/: flake.nix
kernel-abi-check/kernel-abi-check/: Cargo.toml
kernel-abi-check/src/: macos.rs  main.rs  version.rs
kernel-compliance-check/: Cargo.toml  build.rs
kernel-compliance-check/src/: formatter.rs  lib.rs  main.rs  models.rs
lib/: build-sets.nix  build-variants.nix  build-version.nix  build.nix  buildsets.nix  deps.nix  gen-flake-outputs.nix
lib/kernel/: default.nix
scripts/: check-ops.py  gen-docs.py  init-kernel.py
tests/: Dockerfile.test-kernel
(+83 files in other folders)
