[package]
name = "compliant"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
futures = "0.3.31"
hf-hub = { version = "0.4.2", features = ["tokio"] }
kernel-abi-check = { path = "../kernel-abi-check" }
object = "0.36.7"
serde_json = "1.0.114"
tokio = "1.44.2"
